--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
-<div id="content" class="col-md-5 col-lg-offset-2">
-  <header id="header">
+<div id="content" class="col-lg-10 offset-lg-1">
+  <header id="header" class="col-lg-12">
     <h1>
       {{ title }}
     </h1>
   </header>
-  <nav id="nav">
+  <nav id="nav" class="col-lg-12">
     <ul>
       <li>
-        <a href="#">Home</a>
+        <a href="">Home</a>
       </li>
       <li>
         <a href="#">Productos</a>
@@ -17,9 +17,13 @@
       </li>
     </ul>
   </nav>
-  <section id="main">
+  <section id="main" class="col-lg-12">
     <!-- Componente actual -->
+    <h1>Aqui viene el contenido</h1>
   </section>
+  <footer id="footer" class="col-lg-12">
+    <p>Curso Angular 7</p>
+  </footer>
   
 </div>
 
