--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="content" class="col-lg-10 offset-lg-1">
-  <header id="header" class="col-lg-12">
+  <header id="header" class="col-lg-12" [style.background]="header_color">
     <h1>
       {{ title }}
     </h1>
@@ -7,19 +7,21 @@
   <nav id="nav" class="col-lg-12">
     <ul>
       <li>
-        <a href="">Home</a>
+        <a [routerLink]="['/home']"  [routerLinkActive]="['activado']">Home</a>
       </li>
       <li>
-        <a href="#">Productos</a>
+        <a [routerLink]="['/productos']"  [routerLinkActive]="['activado']">Productos</a>
       </li>
       <li>
-          <a href="#">Crear producto</a>
+          <a [routerLink]="['/addProductos']" [routerLinkActive]="['activado']" >Crear producto</a>
       </li>
     </ul>
   </nav>
   <section id="main" class="col-lg-12">
     <!-- Componente actual -->
-    <h1>Aqui viene el contenido</h1>
+    <!-- <app-home></app-home> -->
+    
+<router-outlet></router-outlet>
   </section>
   <footer id="footer" class="col-lg-12">
     <p>Curso Angular 7</p>
@@ -29,4 +31,3 @@
 
   
 
-<router-outlet></router-outlet>
