--- a/src/assets/bootstrap/css/bootstrap.css
+++ b/src/assets/bootstrap/css/bootstrap.css
@@ -2912,6 +2912,7 @@ fieldset:disabled a.btn {
   font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.2rem;
+  margin: 5px !important;
 }
 
 .btn-block {
